Fix broken stylesheet

--- a/style.css
+++ b/style.css
@@ -70,10 +70,6 @@ h1, h3, h5, form {
 	margin-top: 20px;
 }
 
-#user_guide span {
-	text-transform: 
-}
-
 #footer {
 	width: 100%;
 	border-top: 1px solid #ddd;
